--- a/Kod/src/example_html.details.functions.html
+++ b/Kod/src/example_html.details.functions.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2023-12-30 22:55:19</td>
+      <td>2024-01-02 14:50:30</td>
     </tr>
   </table>
 </div>
@@ -74,86 +74,86 @@
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l20">CalculateDeltaCounter</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24">CalculateDeltaCounter</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l20">E2E_profile1.c</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24">E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l20">20</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24">24</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l20"> not called</a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l30">CheckConfig</a>
-    </td>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l30">E2E_profile1.c</a>
-    </td>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l30">30</a>
-    </td>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l30"> called 4 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24"> not called</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l8">Crc_CalculateCRC8</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l35">CheckConfig</a>
     </td>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l8">crc.c</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l35">E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l8">8</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l35">35</a>
     </td>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l8"> not called</a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l148">E2E_P01Check</a>
-    </td>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l148">E2E_profile1.c</a>
-    </td>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l148">148</a>
-    </td>
-    <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l148"> called 2 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l35"> called 2 times</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l109">E2E_P01Protect</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10">Crc_CalculateCRC8</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l109">E2E_profile1.c</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10">crc.c</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l109">109</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10">10</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l109"> called 2 times</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> not called</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l13">E2E_UpdateCounter</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l150">E2E_P01Check</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l13">E2E_profile1.c</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l150">E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l13">13</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l150">150</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l13"> not called</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l150"> called 1 time</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l114">E2E_P01Protect</a>
+    </td>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l114">E2E_profile1.c</a>
+    </td>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l114">114</a>
+    </td>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l114"> called 1 time</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l18">E2E_UpdateCounter</a>
+    </td>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l18">E2E_profile1.c</a>
+    </td>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l18">18</a>
+    </td>
+    <td>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l18"> not called</a>
     </td>
   </tr>
   <tr>
@@ -181,7 +181,7 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l50">50</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l50"> called 2 times</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l50"> called 1 time</a>
     </td>
   </tr>
   <tr>
@@ -195,21 +195,21 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l30">30</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l30"> called 2 times</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l30"> called 1 time</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l67">compute_p01_crc</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l72">compute_p01_crc</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l67">E2E_profile1.c</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l72">E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l67">67</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l72">72</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l67"> not called</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l72"> not called</a>
     </td>
   </tr>
 </table>
