--- a/Kod/src/example_html.details.html
+++ b/Kod/src/example_html.details.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-02 14:50:30</td>
+      <td>2024-01-07 10:23:55</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -47,20 +47,20 @@
     <tr>
       <th scope="row">Lines:</th>
       <td>30</td>
-      <td>117</td>
-      <td class="coverage-low">25.6%</td>
+      <td>121</td>
+      <td class="coverage-low">24.8%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
       <td>5</td>
-      <td>10</td>
-      <td class="coverage-low">50.0%</td>
+      <td>9</td>
+      <td class="coverage-low">55.6%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
       <td>4</td>
-      <td>62</td>
-      <td class="coverage-low">6.5%</td>
+      <td>63</td>
+      <td class="coverage-low">6.3%</td>
     </tr>
   </table>
 </div>
@@ -93,14 +93,14 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html">E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-low" min="0" max="100" value="17.8" title="17.8%">17.8</meter>
+      <meter class="coverage-low" min="0" max="100" value="16.0" title="16.0%">16.0</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-low">17.8%</td>
-    <td class="CoverValue line-coverage coverage-low">16 / 90</td>
+    <td class="CoverValue line-coverage coverage-low">16.0%</td>
+    <td class="CoverValue line-coverage coverage-low">16 / 100</td>
     <td class="CoverValue function-coverage coverage-low">50.0%</td>
     <td class="CoverValue function-coverage coverage-low">3 / 6</td>
-    <td class="CoverValue branch-coverage coverage-low">6.9%</td>
-    <td class="CoverValue branch-coverage coverage-low">4 / 58</td>
+    <td class="CoverValue branch-coverage coverage-low">6.8%</td>
+    <td class="CoverValue branch-coverage coverage-low">4 / 59</td>
   </tr>
 
 
@@ -109,12 +109,12 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html">UT_E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-low" min="0" max="100" value="70.0" title="70.0%">70.0</meter>
+      <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-low">70.0%</td>
-    <td class="CoverValue line-coverage coverage-low">14 / 20</td>
-    <td class="CoverValue function-coverage coverage-low">66.7%</td>
-    <td class="CoverValue function-coverage coverage-low">2 / 3</td>
+    <td class="CoverValue line-coverage coverage-high">100.0%</td>
+    <td class="CoverValue line-coverage coverage-high">14 / 14</td>
+    <td class="CoverValue function-coverage coverage-high">100.0%</td>
+    <td class="CoverValue function-coverage coverage-high">2 / 2</td>
     <td class="CoverValue branch-coverage coverage-unknown">-%</td>
     <td class="CoverValue branch-coverage coverage-unknown">0 / 0</td>
   </tr>
