Test_Of_E2E_P01_CalculateCRC has been added

--- a/Kod/src/example_html.details.html
+++ b/Kod/src/example_html.details.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-07 10:23:55</td>
+      <td>2024-01-07 13:24:30</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -46,21 +46,21 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>30</td>
-      <td>121</td>
-      <td class="coverage-low">24.8%</td>
+      <td>53</td>
+      <td>123</td>
+      <td class="coverage-low">43.1%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
-      <td>5</td>
-      <td>9</td>
-      <td class="coverage-low">55.6%</td>
+      <td>8</td>
+      <td>10</td>
+      <td class="coverage-medium">80.0%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>4</td>
+      <td>10</td>
       <td>63</td>
-      <td class="coverage-low">6.3%</td>
+      <td class="coverage-low">15.9%</td>
     </tr>
   </table>
 </div>
@@ -93,14 +93,14 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html">E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-low" min="0" max="100" value="16.0" title="16.0%">16.0</meter>
+      <meter class="coverage-low" min="0" max="100" value="28.1" title="28.1%">28.1</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-low">16.0%</td>
-    <td class="CoverValue line-coverage coverage-low">16 / 100</td>
-    <td class="CoverValue function-coverage coverage-low">50.0%</td>
-    <td class="CoverValue function-coverage coverage-low">3 / 6</td>
-    <td class="CoverValue branch-coverage coverage-low">6.8%</td>
-    <td class="CoverValue branch-coverage coverage-low">4 / 59</td>
+    <td class="CoverValue line-coverage coverage-low">28.1%</td>
+    <td class="CoverValue line-coverage coverage-low">27 / 96</td>
+    <td class="CoverValue function-coverage coverage-low">66.7%</td>
+    <td class="CoverValue function-coverage coverage-low">4 / 6</td>
+    <td class="CoverValue branch-coverage coverage-low">11.9%</td>
+    <td class="CoverValue branch-coverage coverage-low">7 / 59</td>
   </tr>
 
 
@@ -112,9 +112,9 @@
       <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
     <td class="CoverValue line-coverage coverage-high">100.0%</td>
-    <td class="CoverValue line-coverage coverage-high">14 / 14</td>
+    <td class="CoverValue line-coverage coverage-high">20 / 20</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
-    <td class="CoverValue function-coverage coverage-high">2 / 2</td>
+    <td class="CoverValue function-coverage coverage-high">3 / 3</td>
     <td class="CoverValue branch-coverage coverage-unknown">-%</td>
     <td class="CoverValue branch-coverage coverage-unknown">0 / 0</td>
   </tr>
@@ -125,14 +125,14 @@
       <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html">crc.c</a>
     </th>
     <td>
-      <meter class="coverage-none" min="0" max="100" value="0.0" title="0.0%">0.0</meter>
+      <meter class="coverage-medium" min="0" max="100" value="85.7" title="85.7%">85.7</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-none">0.0%</td>
-    <td class="CoverValue line-coverage coverage-none">0 / 7</td>
-    <td class="CoverValue function-coverage coverage-none">0.0%</td>
-    <td class="CoverValue function-coverage coverage-none">0 / 1</td>
-    <td class="CoverValue branch-coverage coverage-none">0.0%</td>
-    <td class="CoverValue branch-coverage coverage-none">0 / 4</td>
+    <td class="CoverValue line-coverage coverage-medium">85.7%</td>
+    <td class="CoverValue line-coverage coverage-medium">6 / 7</td>
+    <td class="CoverValue function-coverage coverage-high">100.0%</td>
+    <td class="CoverValue function-coverage coverage-high">1 / 1</td>
+    <td class="CoverValue branch-coverage coverage-medium">75.0%</td>
+    <td class="CoverValue branch-coverage coverage-medium">3 / 4</td>
   </tr>
 
 </table>
