--- a/Kod/src/example_html.details.functions.html
+++ b/Kod/src/example_html.details.functions.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-07 10:23:55</td>
+      <td>2024-01-07 13:24:30</td>
     </tr>
   </table>
 </div>
@@ -38,21 +38,21 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>30</td>
-      <td>121</td>
-      <td class="coverage-low">24.8%</td>
+      <td>53</td>
+      <td>123</td>
+      <td class="coverage-low">43.1%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
-      <td>5</td>
-      <td>9</td>
-      <td class="coverage-low">55.6%</td>
+      <td>8</td>
+      <td>10</td>
+      <td class="coverage-medium">80.0%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>4</td>
+      <td>10</td>
       <td>63</td>
-      <td class="coverage-low">6.3%</td>
+      <td class="coverage-low">15.9%</td>
     </tr>
   </table>
 </div>
@@ -111,7 +111,7 @@
       <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10">10</a>
     </td>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> not called</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> called 2 times</a>
     </td>
   </tr>
   <tr>
@@ -153,7 +153,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77">77</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> not called</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> called 1 time</a>
     </td>
   </tr>
   <tr>
@@ -172,16 +172,16 @@
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l34">Test_Of_E2E_P01Check</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33">Test_Of_E2E_P01Check</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l34">UT_E2E_profile1.c</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33">UT_E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l34">34</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33">33</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l34"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33"> called 1 time</a>
     </td>
   </tr>
   <tr>
@@ -196,6 +196,20 @@
     </td>
     <td>
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l14"> called 1 time</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52">Test_Of_E2E_P01_CalculateCRC</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52">UT_E2E_profile1.c</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52">52</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52"> called 1 time</a>
     </td>
   </tr>
 </table>
