E2E_P01_CalculateCRC tesed everywhere

--- a/Kod/src/example_html.details.functions.html
+++ b/Kod/src/example_html.details.functions.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-07 13:24:30</td>
+      <td>2024-01-08 18:57:05</td>
     </tr>
   </table>
 </div>
@@ -38,21 +38,21 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>53</td>
-      <td>123</td>
-      <td class="coverage-low">43.1%</td>
+      <td>84</td>
+      <td>143</td>
+      <td class="coverage-low">58.7%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
       <td>8</td>
-      <td>10</td>
-      <td class="coverage-medium">80.0%</td>
+      <td>11</td>
+      <td class="coverage-low">72.7%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>10</td>
+      <td>17</td>
       <td>63</td>
-      <td class="coverage-low">15.9%</td>
+      <td class="coverage-low">27.0%</td>
     </tr>
   </table>
 </div>
@@ -111,7 +111,21 @@
       <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10">10</a>
     </td>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> called 2 times</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> called 15 times</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l17">Crc_CalculateCRC8Mock</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l17">UT_E2E_profile1.c</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l17">17</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l17"> not called</a>
     </td>
   </tr>
   <tr>
@@ -153,7 +167,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77">77</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> called 1 time</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> called 6 times</a>
     </td>
   </tr>
   <tr>
@@ -172,44 +186,44 @@
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33">Test_Of_E2E_P01Check</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l44">Test_Of_E2E_P01Check</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33">UT_E2E_profile1.c</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l44">UT_E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33">33</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l44">44</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l33"> called 1 time</a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l14">Test_Of_E2E_P01Protect</a>
-    </td>
-    <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l14">UT_E2E_profile1.c</a>
-    </td>
-    <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l14">14</a>
-    </td>
-    <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l14"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l44"> called 1 time</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52">Test_Of_E2E_P01_CalculateCRC</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l25">Test_Of_E2E_P01Protect</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52">UT_E2E_profile1.c</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l25">UT_E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52">52</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l25">25</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l52"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l25"> called 1 time</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l63">Test_Of_E2E_P01_CalculateCRC</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l63">UT_E2E_profile1.c</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l63">63</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l63"> called 1 time</a>
     </td>
   </tr>
 </table>
