--- a/Kod/src/example_html.details.html
+++ b/Kod/src/example_html.details.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-07 13:24:30</td>
+      <td>2024-01-08 18:57:05</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -46,21 +46,21 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>53</td>
-      <td>123</td>
-      <td class="coverage-low">43.1%</td>
+      <td>84</td>
+      <td>143</td>
+      <td class="coverage-low">58.7%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
       <td>8</td>
-      <td>10</td>
-      <td class="coverage-medium">80.0%</td>
+      <td>11</td>
+      <td class="coverage-low">72.7%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>10</td>
+      <td>17</td>
       <td>63</td>
-      <td class="coverage-low">15.9%</td>
+      <td class="coverage-low">27.0%</td>
     </tr>
   </table>
 </div>
@@ -93,14 +93,14 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html">E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-low" min="0" max="100" value="28.1" title="28.1%">28.1</meter>
+      <meter class="coverage-low" min="0" max="100" value="41.7" title="41.7%">41.7</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-low">28.1%</td>
-    <td class="CoverValue line-coverage coverage-low">27 / 96</td>
+    <td class="CoverValue line-coverage coverage-low">41.7%</td>
+    <td class="CoverValue line-coverage coverage-low">40 / 96</td>
     <td class="CoverValue function-coverage coverage-low">66.7%</td>
     <td class="CoverValue function-coverage coverage-low">4 / 6</td>
-    <td class="CoverValue branch-coverage coverage-low">11.9%</td>
-    <td class="CoverValue branch-coverage coverage-low">7 / 59</td>
+    <td class="CoverValue branch-coverage coverage-low">23.7%</td>
+    <td class="CoverValue branch-coverage coverage-low">14 / 59</td>
   </tr>
 
 
@@ -109,12 +109,12 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html">UT_E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
+      <meter class="coverage-high" min="0" max="100" value="95.0" title="95.0%">95.0</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-high">100.0%</td>
-    <td class="CoverValue line-coverage coverage-high">20 / 20</td>
-    <td class="CoverValue function-coverage coverage-high">100.0%</td>
-    <td class="CoverValue function-coverage coverage-high">3 / 3</td>
+    <td class="CoverValue line-coverage coverage-high">95.0%</td>
+    <td class="CoverValue line-coverage coverage-high">38 / 40</td>
+    <td class="CoverValue function-coverage coverage-medium">75.0%</td>
+    <td class="CoverValue function-coverage coverage-medium">3 / 4</td>
     <td class="CoverValue branch-coverage coverage-unknown">-%</td>
     <td class="CoverValue branch-coverage coverage-unknown">0 / 0</td>
   </tr>
