--- a/Kod/src/example_html.details.functions.html
+++ b/Kod/src/example_html.details.functions.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-08 20:16:26</td>
+      <td>2024-01-11 09:16:48</td>
     </tr>
   </table>
 </div>
@@ -38,21 +38,21 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>85</td>
-      <td>144</td>
-      <td class="coverage-low">59.0%</td>
+      <td>105</td>
+      <td>158</td>
+      <td class="coverage-low">66.5%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
-      <td>8</td>
-      <td>11</td>
-      <td class="coverage-low">72.7%</td>
+      <td>12</td>
+      <td>13</td>
+      <td class="coverage-high">92.3%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>17</td>
+      <td>19</td>
       <td>63</td>
-      <td class="coverage-low">27.0%</td>
+      <td class="coverage-low">30.2%</td>
     </tr>
   </table>
 </div>
@@ -83,7 +83,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24">24</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24"> not called</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24"> called 10 times</a>
     </td>
   </tr>
   <tr>
@@ -97,7 +97,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l37">37</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l37"> called 2 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l37"> called 4 times</a>
     </td>
   </tr>
   <tr>
@@ -111,7 +111,7 @@
       <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10">10</a>
     </td>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> called 15 times</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> called 30 times</a>
     </td>
   </tr>
   <tr>
@@ -139,7 +139,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l180">180</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l180"> called 1 time</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l180"> called 2 times</a>
     </td>
   </tr>
   <tr>
@@ -153,7 +153,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l140">140</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l140"> called 1 time</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l140"> called 2 times</a>
     </td>
   </tr>
   <tr>
@@ -167,7 +167,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77">77</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> called 6 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> called 12 times</a>
     </td>
   </tr>
   <tr>
@@ -181,7 +181,21 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l18">18</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l18"> not called</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l18"> called 10 times</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l123">Test_Of_CalculateDeltaCounter</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l123">UT_E2E_profile1.c</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l123">123</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l123"> called 2 times</a>
     </td>
   </tr>
   <tr>
@@ -195,7 +209,7 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l44">44</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l44"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l44"> called 2 times</a>
     </td>
   </tr>
   <tr>
@@ -209,7 +223,7 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l25">25</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l25"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l25"> called 2 times</a>
     </td>
   </tr>
   <tr>
@@ -223,7 +237,21 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l63">63</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l63"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l63"> called 2 times</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l102">Test_Of_E2E_UpdateCounter</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l102">UT_E2E_profile1.c</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l102">102</a>
+    </td>
+    <td>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l102"> called 2 times</a>
     </td>
   </tr>
 </table>
