--- a/Kod/src/example_html.details.html
+++ b/Kod/src/example_html.details.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-08 20:16:26</td>
+      <td>2024-01-11 09:16:48</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -46,21 +46,21 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>85</td>
-      <td>144</td>
-      <td class="coverage-low">59.0%</td>
+      <td>105</td>
+      <td>158</td>
+      <td class="coverage-low">66.5%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
-      <td>8</td>
-      <td>11</td>
-      <td class="coverage-low">72.7%</td>
+      <td>12</td>
+      <td>13</td>
+      <td class="coverage-high">92.3%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>17</td>
+      <td>19</td>
       <td>63</td>
-      <td class="coverage-low">27.0%</td>
+      <td class="coverage-low">30.2%</td>
     </tr>
   </table>
 </div>
@@ -93,14 +93,14 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html">E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-low" min="0" max="100" value="41.7" title="41.7%">41.7</meter>
+      <meter class="coverage-low" min="0" max="100" value="47.9" title="47.9%">47.9</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-low">41.7%</td>
-    <td class="CoverValue line-coverage coverage-low">40 / 96</td>
-    <td class="CoverValue function-coverage coverage-low">66.7%</td>
-    <td class="CoverValue function-coverage coverage-low">4 / 6</td>
-    <td class="CoverValue branch-coverage coverage-low">23.7%</td>
-    <td class="CoverValue branch-coverage coverage-low">14 / 59</td>
+    <td class="CoverValue line-coverage coverage-low">47.9%</td>
+    <td class="CoverValue line-coverage coverage-low">46 / 96</td>
+    <td class="CoverValue function-coverage coverage-high">100.0%</td>
+    <td class="CoverValue function-coverage coverage-high">6 / 6</td>
+    <td class="CoverValue branch-coverage coverage-low">27.1%</td>
+    <td class="CoverValue branch-coverage coverage-low">16 / 59</td>
   </tr>
 
 
@@ -109,12 +109,12 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html">UT_E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-high" min="0" max="100" value="95.1" title="95.1%">95.1</meter>
+      <meter class="coverage-high" min="0" max="100" value="96.4" title="96.4%">96.4</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-high">95.1%</td>
-    <td class="CoverValue line-coverage coverage-high">39 / 41</td>
-    <td class="CoverValue function-coverage coverage-medium">75.0%</td>
-    <td class="CoverValue function-coverage coverage-medium">3 / 4</td>
+    <td class="CoverValue line-coverage coverage-high">96.4%</td>
+    <td class="CoverValue line-coverage coverage-high">53 / 55</td>
+    <td class="CoverValue function-coverage coverage-medium">83.3%</td>
+    <td class="CoverValue function-coverage coverage-medium">5 / 6</td>
     <td class="CoverValue branch-coverage coverage-unknown">-%</td>
     <td class="CoverValue branch-coverage coverage-unknown">0 / 0</td>
   </tr>
