Feat: tests of E2E_P01Check added, code coverage 65%

--- a/Kod/src/example_html.details.html
+++ b/Kod/src/example_html.details.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-12 19:08:43</td>
+      <td>2024-01-20 18:49:31</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -46,9 +46,9 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>145</td>
-      <td>182</td>
-      <td class="coverage-medium">79.7%</td>
+      <td>195</td>
+      <td>217</td>
+      <td class="coverage-medium">89.9%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
@@ -58,9 +58,9 @@
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>37</td>
+      <td>47</td>
       <td>63</td>
-      <td class="coverage-low">58.7%</td>
+      <td class="coverage-low">74.6%</td>
     </tr>
   </table>
 </div>
@@ -93,14 +93,14 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html">E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-low" min="0" max="100" value="62.5" title="62.5%">62.5</meter>
+      <meter class="coverage-medium" min="0" max="100" value="80.0" title="80.0%">80.0</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-low">62.5%</td>
-    <td class="CoverValue line-coverage coverage-low">60 / 96</td>
+    <td class="CoverValue line-coverage coverage-medium">80.0%</td>
+    <td class="CoverValue line-coverage coverage-medium">84 / 105</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
     <td class="CoverValue function-coverage coverage-high">6 / 6</td>
-    <td class="CoverValue branch-coverage coverage-low">57.6%</td>
-    <td class="CoverValue branch-coverage coverage-low">34 / 59</td>
+    <td class="CoverValue branch-coverage coverage-low">74.6%</td>
+    <td class="CoverValue branch-coverage coverage-low">44 / 59</td>
   </tr>
 
 
@@ -112,7 +112,7 @@
       <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
     <td class="CoverValue line-coverage coverage-high">100.0%</td>
-    <td class="CoverValue line-coverage coverage-high">79 / 79</td>
+    <td class="CoverValue line-coverage coverage-high">105 / 105</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
     <td class="CoverValue function-coverage coverage-high">6 / 6</td>
     <td class="CoverValue branch-coverage coverage-unknown">-%</td>
